--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.12.0",
+    "formik": "^2.2.9",
     "framer-motion": "^6.2.8",
     "moment": "^2.29.1",
     "next": "12.1.0",
