--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,18 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:ical": "",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.3",
-    "@prisma/client": "^3.12.0",
-    "formik": "^2.2.9",
-    "framer-motion": "^6.2.8",
-    "moment": "^2.29.1",
+    "framer-motion": "^6.2.10",
     "next": "12.1.0",
-    "next-auth": "^4.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "tailwind-scrollbar-hide": "^1.1.7"
@@ -25,7 +21,6 @@
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "postcss": "^8.4.12",
-    "prisma": "^3.12.0",
     "tailwindcss": "^3.0.23"
   }
 }
