--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.3",
+    "@prisma/client": "^3.12.0",
+    "formik": "^2.2.9",
     "framer-motion": "^6.2.10",
+    "moment": "^2.29.2",
     "next": "12.1.0",
+    "next-auth": "^4.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "tailwind-scrollbar-hide": "^1.1.7"
@@ -21,6 +26,7 @@
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "postcss": "^8.4.12",
+    "prisma": "^3.12.0",
     "tailwindcss": "^3.0.23"
   }
 }
