--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.12.0",
+    "bcrypt": "^5.0.1",
     "formik": "^2.2.9",
     "framer-motion": "^6.2.10",
     "moment": "^2.29.2",
